<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_row"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?selectableItemBackground"
    android:orientation="horizontal"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/border_row"
        android:paddingLeft="@dimen/weighing_horizontal_margin"
        android:paddingRight="@dimen/weighing_horizontal_margin"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <com.actinarium.aligned.TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_date"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            app:leading="20sp"/>

        <com.actinarium.aligned.TextView
            android:id="@+id/tv_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_content"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:ellipsize="end"
            app:leading="20sp"
            app:lastLineDescent="8sp"/>

        <com.actinarium.aligned.TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_product"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            app:leading="20sp"/>

        <com.actinarium.aligned.TextView
            android:id="@+id/tv_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:maxLines="2"
            android:lines="1"
            android:textSize="14sp"
            android:ellipsize="end"
            app:leading="20sp"
            app:lastLineDescent="8sp"/>

        <com.actinarium.aligned.TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_weight"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            app:leading="20sp"/>

        <com.actinarium.aligned.TextView
            android:id="@+id/tv_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:ellipsize="end"
            app:leading="20sp"
            app:lastLineDescent="8sp"/>
    </LinearLayout>

</LinearLayout>