<?xml version="1.0" encoding="utf-8"?>
<com.pingpongpacket.truckview.tools.ScrollViewPercentRelative xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/black_transparent_12p"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/left_guideline"
            app:layout_constraintGuide_percent="0.05"
            android:orientation="vertical"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="39dp" />

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/right_guideline"
            app:layout_constraintGuide_percent="0.95"
            android:orientation="vertical"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="346dp" />

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/top_guideline"
            app:layout_constraintGuide_percent="0.05"
            android:orientation="horizontal"
            tools:layout_editor_absoluteY="31dp"
            tools:layout_editor_absoluteX="0dp" />

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/left_bit_guideline"
            app:layout_constraintGuide_percent="0.05"
            android:orientation="vertical"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="19dp" />

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bottom_guideline"
            app:layout_constraintGuide_percent="1"
            android:orientation="horizontal"
            tools:layout_editor_absoluteY="610dp"
            tools:layout_editor_absoluteX="0dp" />
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:id="@+id/fl_toolbar"
            app:layout_constraintTop_toTopOf="@+id/top_guideline"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:layout_constraintRight_toLeftOf="@+id/right_guideline"
            android:background="@drawable/border_title">

            <android.support.v7.widget.Toolbar
                android:id="@+id/tb_details"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"/>
        </FrameLayout>

        <com.actinarium.aligned.TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/lbl_date"
            android:id="@+id/tv_label_date"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/fl_toolbar"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:leading="20sp"
            app:layout_constraintRight_toLeftOf="@+id/right_guideline" />

        <com.actinarium.aligned.TextView
            android:id="@+id/tv_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/border_row"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:ellipsize="end"
            app:leading="20sp"
            app:lastLineDescent="8sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_date"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:layout_constraintRight_toLeftOf="@+id/right_guideline" />

        <com.actinarium.aligned.TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/lbl_operator_name"
            android:id="@+id/tv_label_operator"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@+id/tv_date"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:leading="20sp"
            app:layout_constraintRight_toLeftOf="@+id/right_guideline" />

        <com.actinarium.aligned.TextView
            android:id="@+id/tv_operator"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:ellipsize="end"
            android:background="@drawable/border_row"
            android:textColor="@android:color/white"
            app:leading="20sp"
            app:lastLineDescent="8sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_operator"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:layout_constraintRight_toLeftOf="@+id/right_guideline" />

        <com.actinarium.aligned.TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/lbl_check_point"
            android:id="@+id/tv_label_checkpoint"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@+id/tv_operator"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:leading="20sp"
            app:layout_constraintRight_toLeftOf="@+id/right_guideline" />

        <com.actinarium.aligned.TextView
            android:id="@+id/tv_checkpoint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:ellipsize="end"
            android:background="@drawable/border_row"
            android:textColor="@android:color/white"
            app:leading="20sp"
            app:lastLineDescent="8sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_checkpoint"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:layout_constraintRight_toLeftOf="@+id/right_guideline" />
        <com.actinarium.aligned.TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/lbl_driver"
            android:id="@+id/tv_label_driver"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@+id/tv_checkpoint"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:leading="20sp"
            app:layout_constraintRight_toLeftOf="@+id/right_guideline" />

        <com.actinarium.aligned.TextView
            android:id="@+id/tv_driver"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:ellipsize="end"
            android:background="@drawable/border_row"
            android:textColor="@android:color/white"
            app:leading="20sp"
            app:lastLineDescent="8sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_driver"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:layout_constraintRight_toLeftOf="@+id/right_guideline" />

        <com.actinarium.aligned.TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/lbl_license"
            android:id="@+id/tv_label_license"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@+id/tv_driver"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:leading="20sp"
            app:layout_constraintRight_toLeftOf="@+id/right_guideline" />

        <com.actinarium.aligned.TextView
            android:id="@+id/tv_license"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:ellipsize="end"
            android:background="@drawable/border_row"
            android:textColor="@android:color/white"
            app:leading="20sp"
            app:lastLineDescent="8sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_license"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:layout_constraintRight_toLeftOf="@+id/right_guideline" />

        <com.actinarium.aligned.TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/lbl_vehicle"
            android:id="@+id/tv_label_vehicle"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@+id/tv_license"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:leading="20sp"
            app:layout_constraintRight_toLeftOf="@+id/right_guideline" />

        <com.actinarium.aligned.TextView
            android:id="@+id/tv_vehicle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:ellipsize="end"
            android:background="@drawable/border_row"
            android:textColor="@android:color/white"
            app:leading="20sp"
            app:lastLineDescent="8sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_vehicle"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:layout_constraintRight_toLeftOf="@+id/right_guideline" />

        <com.actinarium.aligned.TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/lbl_plate"
            android:id="@+id/tv_label_plate"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@+id/tv_vehicle"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:leading="20sp"
            app:layout_constraintRight_toLeftOf="@+id/right_guideline" />

        <com.actinarium.aligned.TextView
            android:id="@+id/tv_plate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:ellipsize="end"
            android:background="@drawable/border_row"
            android:textColor="@android:color/white"
            app:leading="20sp"
            app:lastLineDescent="8sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_plate"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:layout_constraintRight_toLeftOf="@+id/right_guideline" />

        <com.actinarium.aligned.TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/lbl_provider"
            android:id="@+id/tv_label_provider"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@+id/tv_plate"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:leading="20sp"
            app:layout_constraintRight_toLeftOf="@+id/right_guideline" />

        <com.actinarium.aligned.TextView
            android:id="@+id/tv_provider"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:ellipsize="end"
            android:background="@drawable/border_row"
            android:textColor="@android:color/white"
            app:leading="20sp"
            app:lastLineDescent="8sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_provider"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:layout_constraintRight_toLeftOf="@+id/right_guideline" />

        <com.actinarium.aligned.TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/lbl_client"
            android:id="@+id/tv_label_client"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@+id/tv_provider"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:leading="20sp"
            app:layout_constraintRight_toLeftOf="@+id/right_guideline" />

        <com.actinarium.aligned.TextView
            android:id="@+id/tv_client"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:ellipsize="end"
            android:background="@drawable/border_row"
            android:textColor="@android:color/white"
            app:leading="20sp"
            app:lastLineDescent="8sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_client"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:layout_constraintRight_toLeftOf="@+id/right_guideline" />

        <com.actinarium.aligned.TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/lbl_weight"
            android:id="@+id/tv_label_weigh"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@+id/tv_client"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:leading="20sp"
            app:layout_constraintRight_toLeftOf="@+id/right_guideline" />

        <com.actinarium.aligned.TextView
            android:id="@+id/tv_weigh"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:ellipsize="end"
            android:background="@drawable/border_row"
            android:textColor="@android:color/white"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            app:leading="20sp"
            app:lastLineDescent="8sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_weigh"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:layout_constraintRight_toLeftOf="@+id/right_guideline"
            app:layout_constraintBottom_toBottomOf="@+id/bottom_guideline"/>

    </android.support.constraint.ConstraintLayout>


</com.pingpongpacket.truckview.tools.ScrollViewPercentRelative>




